2007-12-28  Sebastien Pouliot  <sebastien@ximian.com>

	* MainShouldNotBePublicRule.cs: New. Rule to check that the Main 
	entry point isn't visible outside it's assembly. By Daniel Abramov.
	* Gendarme.Rules.Design.xml.in: Added new rule description.
	* Gendarme.Rules.Design.mdp: Add new file to MonoDevelop project file.
	* Makefile.am: Add new rule/tests to the build.

2007-12-26  Sebastien Pouliot  <sebastien@ximian.com>

	* AbstractTypesShouldNotHavePublicConstructorsRule.cs: New. Rule
	to check for public constructors inside abstract classes.
	* AvoidEmptyInterfaceRule.cs: New. Rule to check for empty interfaces
	* AvoidPropertiesWithoutGetAccessorRule.cs: New. Rule to check for
	properties with only a setter.
	* DefineAZeroValueRule.cs: New. Abstract base class for 
	[EnumsShould|FlagsShouldNot]DefineAZeroValueRule.
	* DontDeclareProtectedFieldsInSealedClassRule.cs: Updated to use
	simpler Location ctor.
	* EnumsShouldDefineAZeroValueRule.cs: New. Rule to check that all
	enums, except flags, provide a 0 value.
	* FlagsShouldNotDefineAZeroValueRule.cs: New. Rule to check that all
	flags don't provide a 0 value.
	* TypesShouldBeInsideNamespacesRule.cs: New. Rule to check that 
	types are defined inside namspaces.
	* UsingCloneWithoutImplementingICloneableRule.cs: Updated to use
	simpler Location ctor and rocks.
	* Gendarme.Rules.Design.mdp: Add new files to MonoDevelop project file.
	* Gendarme.Rules.Design.xml.in: Update rules descriptions.
	* Makefile.am: Add new rules to the build.

2007-11-22  Sebastien Pouliot  <sebastien@ximian.com>

	* DontDeclareProtectedFieldsInSealedClassRule.cs: Avoid creating
	MessageCollection unless needed.
	* UsingCloneWithoutImplementingICloneableRule.cs: Avoid creating
	MessageCollection unless needed. Also check Clone methods that return
	the current type (not just System.Object)

2007-10-27  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* Gendarme.Rules.Design.xml.in:  Added Uri with the documentation for
	the rules.
