@@ -25,6 +25,8 @@
     <File name="FlagsShouldNotDefineAZeroValueRule.cs" subtype="Code" buildaction="Compile" />
     <File name="TypesShouldBeInsideNamespacesRule.cs" subtype="Code" buildaction="Compile" />
     <File name="MainShouldNotBePublicRule.cs" subtype="Code" buildaction="Compile" />
+    <File name="AvoidPublicInstanceFieldsRule.cs" subtype="Code" buildaction="Compile" />
+    <File name="ConsiderConvertingMethodToPropertyRule.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="True" refto="framework" />
